Released as version 0.83.

Sun Mar 15 16:52:11 1998  Spider Boardman  <spider@Orb.Nashua.NH.US>

	* lib/Net/Gen.pm: Added CLOSE, EOF, and WRITE for tied fh's.

	* MANIFEST: Added hints/linux.pl.

	* hints/linux.pl: Added to avoid TCP_MSS problems on Linux 2.0.30.

	* Gen.xs: Updated to undefine TCP_MSS before including netgen.h
	if BAD_TCP_MSS is defined.  Fixed return types for IPOPT_CLASS
	and IPOPT_NUMBER.

	* Makefile.PL: Added note that DEFINE is expected to be overridden
	by hint files.

Released as version 0.82.

Sat Feb  7 14:56:06 1998  Spider Boardman  <spider@Orb.Nashua.NH.US>

	* lib/Net/UDP.pm: Fixed bug in READLINE reported by Olivier
 	Bodenreider <olivier@nlm.nih.gov>.  I really need to work on
	real regression tests soon....

	* lib/** except Gen.pm: Fix up indirect object syntax examples,
	and point people at the proto-FMTEYEWTK until Tom has the real one
	up on perl.com.

Released as version 0.81.

Thu Jan 29 00:17:08 1998  Spider Boardman  <spider@Orb.Nashua.NH.US>

	* README: Updated description & copyright.

	* ALL: Don't C<use Carp>!  Defer loading carp until we need it.
  	Done by providing carp & croak subs in the modules, and having
 	them be defined as C<require Carp> followed by the appropriate
 	C<goto &Carp::routine>.

	* lib/Net/Inet.pm: Cease getting SOMAXCONN from Socket.pm.

Wed Jan 28 23:47:57 1998  Spider Boardman  <spider@Orb.Nashua.NH.US>

	* Gen.xs: Added SOMAXCONN as a constant XSUB.

	* Makefile.PL: Added just-in-case default define for SOMAXCONN, so
 	that it can be a constant XSUB, too, rather then defined by eval()
 	in Gen.pm.

	* lib/Net/Gen.pm: Eliminated various redundant copies of the form
 	C<$fh = $self>.  Fix to generate proper errno in ->send when we
 	aren't connected and we have no dest-addr arg by just doing the
 	send anyway.  Removed eval() for SOMAXCONN, and stopped inheriting
 	it from Socket.pm.  We'll use another constant XSUB for it.

Wed Dec 24 01:16:18 1997  Spider Boardman  <spider@Orb.Nashua.NH.US>
