@@ -24,7 +24,7 @@ use vars qw($VERSION @ISA @EXPORT @EXPORT_OK %EXPORT_TAGS);
 my $myclass;
 BEGIN {
     $myclass = __PACKAGE__;
-    $VERSION = '0.82';
+    $VERSION = '0.84';
 }
 sub Version () { "$myclass v$VERSION" }
 
@@ -62,6 +62,13 @@ BEGIN {
 # Preloaded methods go here.  Autoload methods go after __END__, and are
 # processed by the autosplit program.
 
+# Can't autoload routines which we could get without autoloading by
+# inheritance, so new() and init() have to be here.  Make them stubs which
+# call autoloadable routines to keep the footprint down when being included
+# from Net::TCP in the interest of backward compatibility.
+
+sub new { &Net::TCP::Server::_new; }
+sub init { &Net::TCP::Server::_init; }
 
 # maybe someday add some fork+accept handling here?
 
@@ -190,7 +197,7 @@ Spider Boardman F<E<lt>spider@Orb.Nashua.NH.USE<gt>>
 
 #any real autoloaded methods go after this line
 
-sub new				# classname, [[hostspec,] service,] [\%params]
+sub _new			# classname, [[hostspec,] service,] [\%params]
 {
     $_[0]->_trace(\@_,1);
     my ($xclass, @Args) = @_;
@@ -202,7 +209,7 @@ sub new				# classname, [[hostspec,] service,] [\%params]
     return undef unless $self;
     $self->setparams({reuseaddr => 1}, -1);
     $xclass = ref $xclass if ref $xclass;
-    if ($xclass eq $myclass) {
+    if ($xclass eq __PACKAGE__) {
 	unless ($self->init(@Args)) {
 	    local $!;		# protect returned errno value
 	    undef $self;	# against excess closes in perl core
@@ -212,7 +219,7 @@ sub new				# classname, [[hostspec,] service,] [\%params]
     $self;
 }
 
-sub init			# $self, [@stuff] ; returns updated $self
+sub _init			# $self, [@stuff] ; returns updated $self
 {
     my ($self, @Args) = @_;
     if (@Args == 2 && ref $Args[1] && ref $Args[1] eq 'HASH' or
@@ -225,7 +232,7 @@ sub init			# $self, [@stuff] ; returns updated $self
 	return unless $self->bind;
     }
     if ($self->isbound && !$self->didlisten) {
-	return unless $self->listen;
+	return unless $self->isconnected or $self->listen;
     }
     $self;
 }
